Proxy (#51)
https://trello.com/c/FMxCB0CE/6-proxy-3rd-party-charts-service